Updating depreciated code for the level constructors